[Refactor] : .collect(Collectors.toList()) -> .toList()로 변경